# codeindex

./: .gitignore  .npmignore  PUBLISHING.md  codeindex.config.json.example  package-lock.json  package.json  promo.md  readme.md  todolist.md  tsconfig.json
docs/: chunk-annotation-design.md  deepseek-ocr-evaluation.md  implementation-summary.md  language-support.md  nested-struct-indexing.md  project.md  quickstart.md  summarizer-usage.md
examples/: demo-nested-struct.ts  nested-struct-test.go  sample-code.go  sample-code.html  sample-code.java  sample-code.py  sample-code.rs  sample-code.ts  test-go.ts  test-html.ts  test-java.ts  test-nested-struct.ts  test-python.ts  test-rebuild.ts  test-rust.ts  test-summarizer.ts  test-typescript.ts  usage.ts
scripts/: clean-package-lock.js  index-monkeycode-ai.sh  publish.sh  rebuild-monkeycode-ai.sh
sdk/: README.md
sdk/javascript/: README.md
sdk/python/: IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  SEMANTIC_SEARCH.md  example_search.py  publish.sh  pyproject.toml  test_client.py  worker_server.js
sdk/python/codeindex_sdk/: __init__.py  client.py  config.py  exceptions.py
sdk/python/codeindex_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdk/python/lydiacai_codeindex_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: index.ts
src/cli/: index.ts
src/core/: types.ts
src/embeddings/: embeddings-generator.ts
src/extractor/: go-extractor.ts  html-extractor.ts  java-extractor.ts  python-extractor.ts  rust-extractor.ts  typescript-extractor.ts
src/indexer/: indexer.ts
src/query/: query-engine.ts
(+5 files in other folders)
