[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeindex-sdk"
version = "0.1.0"
description = "CodeIndex 的官方 Python SDK，内置 Node Worker 以便直接查询索引"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "CodeIndex", email = "opensource@example.com"}
]
dependencies = [
  "typing_extensions>=4.5.0"
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.setuptools.packages.find]
where = ["."]

