[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lydiacai-codeindex-sdk"
version = "0.1.0"
description = "CodeIndex 的官方 Python SDK，内置 Node Worker 以便直接查询索引"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "CodeIndex", email = "opensource@example.com"}
]
keywords = [
  "codeindex",
  "ast",
  "code-index",
  "tree-sitter",
  "code-intelligence",
  "semantic-search"
]
dependencies = [
  "typing_extensions>=4.5.0"
]
[project.urls]
Homepage = "https://github.com/LydiaCai1203/codeindex"
Repository = "https://github.com/LydiaCai1203/codeindex"
Issues = "https://github.com/LydiaCai1203/codeindex/issues"

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[tool.setuptools.packages.find]
where = ["."]

